# pallierAttendanceClient

./: attendance.txt  client(json).py  client_logic.py  main.py  pyproject.toml
